# table2json

./: .env.example  README.md  enum_files.txt.example  pyproject.toml
input/: README.md
output/: README.md
src/table2json/: csharp_enum.py  encrypt.py  main.py  parser.py
